--- a/arrow-processor/build.gradle
+++ b/arrow-processor/build.gradle
@@ -42,7 +42,7 @@ dependencies {
             // therefore we changed the version manually and have to use here the same
             compile "com.google.protobuf:protobuf-java:3.7.1"
         } else {
-            compile "com.google.protobuf:protobuf-java:2.5.0"
+            compile "com.google.protobuf:protobuf-java:3.7.1" //2.5.0
         }
         compile "io.netty:netty-all:4.1.54.Final"
         compile "org.apache.arrow:arrow-memory:$arrowVersion"
