--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
+jitdump*
+javacore*
+Snap*
 ### Gradle template
 .gradle
 /build/
