Add modified dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,13 +35,13 @@ RUN wget -q https://github.com/protocolbuffers/protobuf/releases/download/v3.7.1
         rm -rf /protobuf
 
 # Download & install apache arrow and gandiva jar file
-RUN wget -q http://apache.40b.nl/arrow/arrow-0.17.1/apache-arrow-0.17.1.tar.gz &&\
+RUN wget -q https://github.com/apache/arrow/archive/apache-arrow-0.17.1.tar.gz &&\
         mkdir /arrow &&\
         tar -xzf apache-arrow-0.17.1.tar.gz --strip-components 1 -C /arrow &&\
         rm -f apache-arrow-0.17.1.tar.gz &&\
         mkdir /arrow/cpp/release &&\
         cd /arrow/cpp/release &&\
-        cmake -DARROW_PARQUET=ON -DARROW_GANDIVA=ON -DARROW_GANDIVA_JAVA=ON -DARROW_DATASET=ON -DARROW_WITH_SNAPPY=ON .. &&\
+        cmake -DARROW_PARQUET=ON -DARROW_GANDIVA=ON -DARROW_GANDIVA_JAVA=ON -DARROW_CSV=ON -DARROW_DATASET=ON -DARROW_WITH_SNAPPY=ON .. &&\
         make &&\
         make install &&\
         cd /arrow/java &&\
@@ -51,23 +51,23 @@ RUN wget -q http://apache.40b.nl/arrow/arrow-0.17.1/apache-arrow-0.17.1.tar.gz &
         cd /gandiva-jar &&\
         rm -rf /arrow
 
-# Download Fletcher
-RUN wget -q https://github.com/abs-tudelft/fletcher/archive/develop.zip &&\
-        unzip -q develop.zip  &&\
-        mv /fletcher-develop /fletcher &&\
-        rm -f develop.zip && \
-# Install Fletcher Runtime \
-        mkdir /fletcher/runtime/cpp/build &&\
-        cd /fletcher/runtime/cpp/build &&\
-        cmake .. &&\
-        make &&\
-        make install &&\
-# Install Fletcher Echo Platform
-        mkdir /fletcher/platforms/echo/runtime/build &&\
-        cd /fletcher/platforms/echo/runtime/build &&\
-        cmake .. &&\
-        make &&\
-        make install
+## Download Fletcher
+#RUN wget -q https://github.com/abs-tudelft/fletcher/archive/develop.zip &&\
+#        unzip -q develop.zip  &&\
+#        mv /fletcher-develop /fletcher &&\
+#        rm -f develop.zip && \
+## Install Fletcher Runtime \
+#        mkdir /fletcher/runtime/cpp/build &&\
+#        cd /fletcher/runtime/cpp/build &&\
+#        cmake .. &&\
+#        make &&\
+#        make install &&\
+## Install Fletcher Echo Platform
+#        mkdir /fletcher/platforms/echo/runtime/build &&\
+#        cd /fletcher/platforms/echo/runtime/build &&\
+#        cmake .. &&\
+#        make &&\
+#        make install
 
 ENV GANDIVA_JAR_DIR /gandiva-jar
 ENV LOCAL_LIBRARY_PATH /usr/local/lib
@@ -75,4 +75,4 @@ ENV LOCAL_LIBRARY_PATH /usr/local/lib
 VOLUME /app
 WORKDIR /app
 
-CMD []
+CMD ["/bin/bash"]
